Remove results endpoints (datasets, figures, metrics) (#191)
