# docs/swagger.yaml
@@ -523,102 +523,6 @@ paths:
           $ref: "#/components/responses/InternalServerError"
         "503":
           $ref: "#/components/responses/ServiceUnavailable"
-  /projects/{projectId}/experiments/{experimentId}/operators/{operatorId}/datasets:
-    get:
-      summary: "List datasets paginated."
-      tags:
-        - "Operators"
-      parameters:
-        - name: projectId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: experimentId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: operatorId
-          in: path
-          required: true
-          schema:
-            type: string
-        - in: query
-          name: page
-          schema:
-            type: integer
-          description: Page number
-        - in: query
-          name: page_size
-          schema:
-            type: integer
-          description: Page size
-      responses:
-        "200":
-          $ref: "#/components/responses/Datasets"
-        "500":
-          $ref: "#/components/responses/InternalServerError"
-        "503":
-          $ref: "#/components/responses/ServiceUnavailable"
-  /projects/{projectId}/experiments/{experimentId}/operators/{operatorId}/figures:
-    get:
-      summary: "List all figures."
-      tags:
-        - "Operators"
-      parameters:
-        - name: projectId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: experimentId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: operatorId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          $ref: "#/components/responses/Figures"
-        "500":
-          $ref: "#/components/responses/InternalServerError"
-        "503":
-          $ref: "#/components/responses/ServiceUnavailable"
-  /projects/{projectId}/experiments/{experimentId}/operators/{operatorId}/metrics:
-    get:
-      summary: "List all metrics."
-      tags:
-        - "Operators"
-      parameters:
-        - name: projectId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: experimentId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: operatorId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          $ref: "#/components/responses/Metrics"
-        "404":
-          $ref: "#/components/responses/NotFound"
-        "500":
-          $ref: "#/components/responses/InternalServerError"
-        "503":
-          $ref: "#/components/responses/ServiceUnavailable"
   /templates:
     get:
       summary: "List all templates sorted by name in natural sort order."
@@ -929,47 +833,6 @@ components:
                 type: string
                 enum: [Unset, Setted up]
                 example: Setted up
-    Datasets:
-      type: array
-      items:
-        oneOf:
-          - type: object
-            properties:
-              columns:
-                type: array
-                items:
-                  oneOf:
-                    - type: string
-                      example: "SepalLengthCm"
-                    - type: string
-                      example: "Species"
-              data:
-                type: array
-                items:
-                  oneOf:
-                    - type: array
-                      items:
-                        oneOf:
-                          - type: number
-                            example: 5.1
-                          - type: string
-                            example: "Iris-setosa"
-              total:
-                type: number
-                example: 2
-    Figures:
-      type: array
-      items:
-        oneOf:
-          - type: string
-            example: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMAAAAC6CAIAAAB3B9X3AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG6SURBVHhe7dIxAQAADMOg+TfdicgLGrhBIBCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhCJQCQCkQhEIhDB9ho69eEGiUHfAAAAAElFTkSuQmCC"
-    Metrics:
-      type: array
-      items:
-        oneOf:
-          - type: object
-            example:
-              metric_name: metric_value
     Template:
       type: object
       properties:
@@ -1350,24 +1213,6 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/Operators"
-    Datasets:
-      description: ""
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/Datasets"
-    Figures:
-      description: ""
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/Figures"
-    Metrics:
-      description: ""
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/Metrics"
     Template:
       description: ""
       content:
